Added custom assets for profile, project, resume and new images for backgrounds and aesthetics. Created coursework and involvement pages. Designed new SCSS sections for course list, education, hero image, and involvement list. Updated variables and base styles. Added header layout styles and button component styles.

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #5e0c0f;
+$secondary-color: #3a0205;
 
 $white-color: #fff;
 
