--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: "IBM Plex Serif", sans-serif;
   text-align: center;
   scroll-behavior: smooth;
 }
