--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -82,6 +82,71 @@
   }
 }
 
+/* Hero Image Style */
+.cta-btn--heroImage {
+
+  @include supportColorForIE11();
+  border-width: 2px;
+  border-style: solid;
+
+  -moz-border-image: -moz-linear-gradient(
+    135deg,
+    $primary-color 0%,
+    $secondary-color 100%
+  );
+  -webkit-border-image: -webkit-linear-gradient(
+    135deg,
+    $primary-color 0%,
+    $secondary-color 100%
+  );
+  border-image: linear-gradient(
+    135deg,
+    $primary-color 0%,
+    $secondary-color 100%
+  );
+  -webkit-border-image-slice: 1;
+  border-image-slice: 1;
+
+  @include supportIE11() {
+    color: $secondary-color !important;
+
+    &:hover {
+      color: $white-color !important;
+    }
+  }
+
+  @include respond(phone) {
+    background-image: none;
+    border: 2px solid $secondary-color;
+    -webkit-text-fill-color: $secondary-color;
+  }
+
+  &::after {
+    background-image: linear-gradient(
+      135deg,
+      $primary-color 0%,
+      $secondary-color 100%
+    );
+
+    @include respond(phone) {
+      background-image: none;
+    }
+  }
+
+  &:hover {
+    -webkit-text-fill-color: $white-color;
+    text-decoration: none;
+
+    @include respond(phone) {
+      -webkit-text-fill-color: $secondary-color;
+    }
+
+    &::after {
+      width: 100%;
+    }
+  }
+}
+
 /* Resume Style */
 .cta-btn--resume {
   color: $white-color;
