--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,9 +10,15 @@
 @import "./sass/components/buttons";
 
 @import "./sass/layout/footer";
+@import "./sass/layout/header";
 @import "./sass/layout/sections";
 
 @import "./sass/sections/about";
 @import "./sass/sections/contact";
 @import "./sass/sections/hero";
 @import "./sass/sections/projects";
+
+@import "./sass/sections/education";
+@import "./sass/sections/courselist";
+@import "./sass/sections/involvementlist";
+@import "./sass/sections/heroImage";
