--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
-  background-color: $dark-grey;
-  color: $white-color;
+  background-color: $secondary-color;
+  color: $primary-color;
   padding: 4.8rem 0;
 
   @include respond(phone) {
@@ -16,7 +16,7 @@
       font-size: 1.3rem;
       transition: all 0.4s;
       display: inline-block;
-      background-color: $dark-grey;
+      background-color: inherit;
 
       &:hover,
       &:active {
@@ -44,7 +44,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    color: $white-color;
+    color: $primary-color;
     font-size: 3rem;
     width: 5rem;
     height: 5rem;
