Updated about me, navigation links, and added involvement page.

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -166,6 +166,24 @@
   }
 }
 
+/* Courselist Style */
+.cta-btn--courselist {
+  color: $dark-blue-text;
+
+  &::after {
+    background: $white-color;
+  }
+
+  &:hover {
+    color: $secondary-color;
+    text-decoration: none;
+
+    &::after {
+      width: 100%;
+    }
+  }
+}
+
 /* Arrow Button */
 .up i {
   color: #272727;
