--- a/src/sass/sections/_education.scss
+++ b/src/sass/sections/_education.scss
@@ -54,7 +54,7 @@
       }
 
       & p > a {
-        color: $secondary-color;
+        color: $white;
       }
     }
 
@@ -77,7 +77,7 @@
           0.5s -webkit-transform cubic-bezier(0.155, 1.105, 0.295, 1.12);
 
         @include respond(phone) {
-          border: 1px solid $light-grey;
+          border: 1px solid $white;
           box-shadow: none;
           margin-bottom: 3.2rem;
         }
