added navbar for nfl ml page

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -188,3 +188,12 @@
 .up i {
   color: #272727;
 }
+
+.navbar-custom {
+  border-style:solid;
+  border-color: #5e0c0f;
+  border-width: 3;
+  background: white;
+  color: #5e0c0f;
+  display:block;
+}
